Layout fixing filter menu WIP

--- a/app/src/main/res/layout/backpack_menu_filter.xml
+++ b/app/src/main/res/layout/backpack_menu_filter.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/include"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/background_filter_menu"
@@ -13,10 +13,8 @@
         android:contentDescription="@string/filter_menu_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/filter_achtergrond" />
 
     <ImageView
@@ -24,8 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/filter_menu_content"
-        android:paddingTop="40dp"
-        android:paddingBottom="30dp"
+        android:padding="40dp"
         app:layout_constraintBottom_toBottomOf="@+id/background_filter_menu"
         app:layout_constraintEnd_toEndOf="@+id/background_filter_menu"
         app:layout_constraintStart_toStartOf="@+id/background_filter_menu"
