--- a/app/src/main/res/layout/fragment_backpack.xml
+++ b/app/src/main/res/layout/fragment_backpack.xml
@@ -8,6 +8,7 @@
         <variable
             name="backpackViewModel"
             type="be.hogent.faith.faith.backpackScreen.BackpackViewModel" />
+
         <import type="android.view.View" />
     </data>
 
@@ -16,8 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/background_backpack"
-        app:layoutDescription="@xml/filtermenu_slide"
-        >
+        app:layoutDescription="@xml/filtermenu_slide">
 
 
         <ImageView
@@ -38,11 +38,10 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
 
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/guide_filtermenu_vertical"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-             />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guide_undo_horizontal"
@@ -71,6 +70,7 @@
             android:layout_height="12dp"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.22" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guide_filtermenu_vertical"
             android:layout_width="8dp"
@@ -110,8 +110,8 @@
             android:id="@+id/btn_backpack_search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:clickable="@{backpackViewModel.viewButtons == true ? true : false}"
             android:background="@drawable/search_btn"
+            android:clickable="@{backpackViewModel.viewButtons == true ? true : false}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:srcCompat="@drawable/search_btn" />
@@ -125,14 +125,14 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
 
-  />
+            />
 
         <ImageButton
             android:id="@+id/btn_backpack_draw_cancel"
             android:layout_width="@dimen/material_icon_width"
-            android:clickable="@{backpackViewModel.viewButtons == true ? true : false}"
             android:layout_height="@dimen/material_icon_height"
             android:background="@drawable/ic_return"
+            android:clickable="@{backpackViewModel.viewButtons == true ? true : false}"
             android:contentDescription="@string/cancel"
             app:layout_constraintStart_toStartOf="@+id/guide_search_btn"
             app:layout_constraintTop_toTopOf="@+id/guide_undo_horizontal" />
