--- a/app/src/main/res/layout/fragment_backpack.xml
+++ b/app/src/main/res/layout/fragment_backpack.xml
@@ -39,8 +39,7 @@
             android:layout_height="match_parent"
 
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/guide_filtermenu_vertical"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.constraintlayout.widget.Guideline
@@ -90,6 +89,7 @@
             android:id="@+id/recyclerview_backpack"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:layout_marginStart="16dp"
             android:scrollbars="horizontal|vertical"
             app:layout_constraintBottom_toTopOf="@+id/guide_rv_horizontal_2"
             app:layout_constraintEnd_toStartOf="@+id/guide_items_vertical_end"
