--- a/app/src/main/res/layout/fragment_edit_detail.xml
+++ b/app/src/main/res/layout/fragment_edit_detail.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -9,7 +10,6 @@
     </data>
 
     <androidx.constraintlayout.motion.widget.MotionLayout
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/motionLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -28,10 +28,21 @@
             android:id="@+id/image_editDetail_avatar"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:scaleType="centerCrop"
             android:adjustViewBounds="true"
             android:contentDescription="@string/avatar_inkleuren"
-            android:src="@drawable/avatar"
+            android:scaleType="centerCrop"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/textView_editDetail_avatar"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:text="@string/avatar_nog_niet_ingekleurd"
+            android:textSize="30sp"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -40,8 +51,8 @@
             android:id="@+id/tv_editdetail_slideToEmotionAvatar"
             android:layout_width="40dp"
             android:layout_height="60dp"
-            android:src="@drawable/ic_arrow"
             android:contentDescription="@string/slide"
+            android:src="@drawable/ic_arrow"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -64,9 +75,9 @@
             android:contentDescription="@string/editeer"
             android:elevation="2dp"
             android:onClick="@{() -> editdetailViewModel.onGoToEmotionAvatarButtonClicked()}"
-            app:srcCompat="@drawable/ic_baseline_edit_24px"
             app:layout_constraintBottom_toBottomOf="@id/image_editDetail_avatar"
-            app:layout_constraintStart_toStartOf="@id/image_editDetail_avatar" />
+            app:layout_constraintStart_toStartOf="@id/image_editDetail_avatar"
+            app:srcCompat="@drawable/ic_baseline_edit_24px" />
 
     </androidx.constraintlayout.motion.widget.MotionLayout>
 </layout>
