--- a/app/src/main/res/layout/fragment_record_audio.xml
+++ b/app/src/main/res/layout/fragment_record_audio.xml
@@ -48,7 +48,7 @@
 
             <SeekBar
                 android:id="@+id/seekBar"
-                android:layout_width="700dp"
+                android:layout_width="0dp"
                 android:layout_height="58dp"
                 android:layout_marginTop="16dp"
                 android:progressDrawable="@drawable/audio_seekbar_progress"
@@ -59,133 +59,11 @@
                 app:layout_constraintEnd_toEndOf="@+id/cardView_audio_center"
                 app:layout_constraintStart_toStartOf="@+id/cardView_audio_center"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintWidth_default="percent"
+                app:layout_constraintWidth_percent="0.625"
                 tools:progress="25" />
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/cardView_audio_center"
-                android:layout_width="wrap_content"
-                android:layout_height="120dp"
-                android:layout_marginBottom="16dp"
-                app:cardCornerRadius="@dimen/panel_corner_radius"
-                app:layout_constraintBottom_toTopOf="@+id/guide_recordAudio_bottom"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/seekBar">
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/audio_initial"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal|center_vertical"
-                    android:layout_margin="8dp"
-                    android:visibility="@{audioDetailViewModel.viewState == be.hogent.faith.faith.details.audio.AudioViewState.Initial ? View.VISIBLE : View.GONE}"
-                    tools:visibility="gone">
-
-                    <ImageButton
-                        android:id="@+id/btn_recordAudio_recorderStart"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="40dp"
-                        android:background="@drawable/button_record_start"
-                        android:contentDescription="@string/description_start_recording"
-                        android:onClick="@{() -> audioDetailViewModel.onRecorderStartButtonClicked()}"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/audio_recording"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center_horizontal|center_vertical"
-                    android:layout_margin="8dp"
-                    android:visibility="@{audioDetailViewModel.viewState == be.hogent.faith.faith.details.audio.AudioViewState.Recording ? View.VISIBLE : View.GONE}">
-
-                    <ImageButton
-                        android:id="@+id/btn_recordAudio_recorderStop"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="40dp"
-                        android:background="@drawable/button_record_stop"
-                        android:contentDescription="@string/description_stop_recording"
-                        android:onClick="@{() -> audioDetailViewModel.onRecorderStopButtonClicked()}"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toStartOf="@id/btn_recordAudio_recorderPause"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <ImageButton
-                        android:id="@+id/btn_recordAudio_recorderPause"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="40dp"
-                        android:background="@drawable/button_record_pause"
-                        android:contentDescription="@string/description_recording_pause"
-                        android:onClick="@{() -> audioDetailViewModel.onRecorderPauseButtonClicked()}"
-                        android:visibility="@{audioDetailViewModel.pauseRecordingVisible ? View.VISIBLE : View.GONE}"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toEndOf="@id/btn_recordAudio_recorderStop"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <ImageButton
-                        android:id="@+id/btn_recordAudio_recorderRestartRecording"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="40dp"
-                        android:background="@drawable/button_record_start"
-                        android:contentDescription="@string/description_start_recording"
-                        android:onClick="@{() -> audioDetailViewModel.onRecorderPauseButtonClicked()}"
-                        android:visibility="@{audioDetailViewModel.restartRecordingVisible ? View.VISIBLE : View.GONE}"
-                        app:layout_constraintBottom_toBottomOf="@id/btn_recordAudio_recorderPause"
-                        app:layout_constraintEnd_toEndOf="@id/btn_recordAudio_recorderPause"
-                        app:layout_constraintStart_toStartOf="@id/btn_recordAudio_recorderPause"
-                        app:layout_constraintTop_toTopOf="@id/btn_recordAudio_recorderPause" />
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/audio_doneRecording"
-                    android:layout_width="270dp"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center_horizontal|center_vertical"
-                    android:layout_margin="8dp"
-                    android:visibility="@{audioDetailViewModel.viewState == be.hogent.faith.faith.details.audio.AudioViewState.FinishedRecording ? View.VISIBLE : View.GONE}"
-                    tools:visibility="gone">
-
-                    <ImageButton
-                        android:id="@+id/btn_recordAudio_playerPause"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="8dp"
-                        android:background="@drawable/button_audio_pause"
-                        android:contentDescription="@string/description_pause_recording"
-                        android:onClick="@{() -> audioDetailViewModel.onPlayerPauseButtonClicked()}"
-                        app:layout_constraintBottom_toBottomOf="@+id/btn_recordAudio_playerPlay"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toEndOf="@id/btn_recordAudio_playerPlay"
-                        app:layout_constraintTop_toTopOf="@+id/btn_recordAudio_playerPlay" />
-
-                    <ImageButton
-                        android:id="@+id/btn_recordAudio_playerPlay"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="8dp"
-                        android:background="@drawable/button_audio_play"
-                        android:contentDescription="@string/description_play_recording"
-                        android:onClick="@{() -> audioDetailViewModel.onPlayerPlayButtonClicked()}"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toStartOf="@id/btn_recordAudio_playerPause"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-            </androidx.cardview.widget.CardView>
+            <include layout="@layout/layout_recordaudio_startrecording" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guide_recordAudio_bottom"
