--- a/app/src/main/res/layout/layout_recordaudio_recording.xml
+++ b/app/src/main/res/layout/layout_recordaudio_recording.xml
@@ -1,57 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/cardView_audio_center"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    app:cardCornerRadius="@dimen/panel_corner_radius">
+    android:layout_height="wrap_content">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView_audioRecording"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal|center_vertical"
-        android:visibility="@{audioDetailViewModel.viewState == be.hogent.faith.faith.details.audio.AudioViewState.Recording ? View.VISIBLE : View.GONE}">
+        android:layout_marginTop="16dp"
+        app:cardCornerRadius="@dimen/panel_corner_radius"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/lbl_recordAudio_recordingTimer">
 
-        <ImageButton
-            android:id="@+id/btn_recordAudio_recorderStop"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="40dp"
-            android:background="@drawable/button_record_stop"
-            android:contentDescription="@string/description_stop_recording"
-            android:onClick="@{() -> audioDetailViewModel.onRecorderStopButtonClicked()}"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/btn_recordAudio_recorderPause"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:orientation="horizontal">
 
-        <ImageButton
-            android:id="@+id/btn_recordAudio_recorderPause"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="40dp"
-            android:background="@drawable/button_record_pause"
-            android:contentDescription="@string/description_recording_pause"
-            android:onClick="@{() -> audioDetailViewModel.onRecorderPauseButtonClicked()}"
-            android:visibility="@{audioDetailViewModel.pauseRecordingVisible ? View.VISIBLE : View.GONE}"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/btn_recordAudio_recorderStop"
-            app:layout_constraintTop_toTopOf="parent" />
+            <ImageButton
+                android:id="@+id/btn_recordAudio_recorderStop"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_margin="40dp"
+                android:background="@drawable/button_record_stop"
+                android:contentDescription="@string/description_stop_recording"
+                android:onClick="@{() -> audioDetailViewModel.onRecorderStopButtonClicked()}" />
 
-        <ImageButton
-            android:id="@+id/btn_recordAudio_recorderRestartRecording"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="40dp"
-            android:background="@drawable/button_record_start"
-            android:contentDescription="@string/description_start_recording"
-            android:onClick="@{() -> audioDetailViewModel.onRecorderPauseButtonClicked()}"
-            android:visibility="@{audioDetailViewModel.restartRecordingVisible ? View.VISIBLE : View.GONE}"
-            app:layout_constraintBottom_toBottomOf="@id/btn_recordAudio_recorderPause"
-            app:layout_constraintEnd_toEndOf="@id/btn_recordAudio_recorderPause"
-            app:layout_constraintStart_toStartOf="@id/btn_recordAudio_recorderPause"
-            app:layout_constraintTop_toTopOf="@id/btn_recordAudio_recorderPause" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.cardview.widget.CardView>
+            <ImageView
+                android:id="@+id/img_line"
+                android:layout_width="1dp"
+                android:layout_height="0dp"
+                android:src="@drawable/line_vertical" />
+
+            <ImageButton
+                android:id="@+id/btn_recordAudio_recorderPause"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_margin="40dp"
+                android:background="@drawable/button_record_pause"
+                android:contentDescription="@string/description_recording_pause"
+                android:onClick="@{() -> audioDetailViewModel.onRecorderPauseButtonClicked()}"
+                android:visibility="@{audioDetailViewModel.pauseRecordingVisible ? View.VISIBLE : View.GONE}" />
+
+            <ImageButton
+                android:id="@+id/btn_recordAudio_recorderRestartRecording"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_margin="40dp"
+                android:background="@drawable/button_record_start"
+                android:contentDescription="@string/description_start_recording"
+                android:onClick="@{() -> audioDetailViewModel.onRecorderPauseButtonClicked()}"
+                android:visibility="@{audioDetailViewModel.restartRecordingVisible ? View.VISIBLE : View.GONE}" />
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+
+    <TextView
+        android:id="@+id/lbl_recordAudio_recordingTimer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/rectangle_white"
+        android:padding="16dp"
+        android:text="@{audioDetailViewModel.recordingTime}"
+        android:textColor="@color/caption"
+        android:textSize="45sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/cardView_audioRecording"
+        app:layout_constraintEnd_toEndOf="@+id/cardView_audioRecording"
+        app:layout_constraintStart_toStartOf="@+id/cardView_audioRecording"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="01:23" />
+
+    <TextView
+        android:id="@+id/lbl_audio_recording_firstButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Opname stoppen"
+        android:textAllCaps="true"
+        android:textColor="@color/caption"
+        app:layout_constraintEnd_toStartOf="@+id/lbl_audio_recording_secondButton"
+        app:layout_constraintStart_toStartOf="@id/cardView_audioRecording"
+        app:layout_constraintTop_toBottomOf="@id/cardView_audioRecording" />
+
+    <TextView
+        android:id="@+id/lbl_audio_recording_secondButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Opname pauzeren"
+        android:textAllCaps="true"
+        android:textColor="@color/caption"
+        app:layout_constraintBottom_toBottomOf="@id/lbl_audio_recording_firstButton"
+        app:layout_constraintEnd_toEndOf="@id/cardView_audioRecording"
+        app:layout_constraintStart_toEndOf="@id/lbl_audio_recording_firstButton"
+        app:layout_constraintTop_toTopOf="@id/lbl_audio_recording_firstButton" />
+</androidx.constraintlayout.widget.ConstraintLayout>
