--- a/app/src/main/res/layout/dialog_save_event.xml
+++ b/app/src/main/res/layout/dialog_save_event.xml
@@ -82,6 +82,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
                 android:contentDescription="@string/schilder"
+                android:padding="0dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/guide_save_painter_end"
                 app:layout_constraintTop_toBottomOf="@+id/btn_save_event_cancel"
@@ -104,29 +105,26 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:id="@+id/textInputLayout_date"
-                        style="@style/faith_textInputLayout"
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/save_event_btn_date"
+                        style="@style/faith_calendar_button"
                         android:layout_width="0dp"
                         android:layout_height="@dimen/event_textInput_height"
+                        android:layout_marginTop="0dp"
                         android:layout_marginEnd="64dp"
-                        app:hintEnabled="false"
-                        app:layout_constraintBottom_toTopOf="@+id/save_event_title"
+                        android:contentDescription="@string/save"
+                        android:elevation="0dp"
+                        android:fontFamily="@font/sourcesanspro"
+                        android:onClick="@{() -> eventViewModel.onDateButtonClicked()}"
+                        android:text="@{eventViewModel.eventDateString}"
+                        android:textAppearance="?attr/textAppearanceSubtitle1"
+                        android:textColor="@color/black"
+                        app:icon="@drawable/ic_kalender"
+                        app:iconGravity="textStart"
+                        app:iconPadding="5dp"
+                        app:iconSize="44dp"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent">
-
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/btn_save_event_open_datepicker"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:drawableStart="@drawable/ic_kalender"
-                            android:drawablePadding="5dp"
-                            android:hint="@string/datum"
-                            android:inputType="date"
-                            android:onClick="@{() -> eventViewModel.onDateButtonClicked()}"
-                            android:text="@{eventViewModel.eventDateString}"
-                            tools:text="@tools:sample/date/ddmmyy" />
-                    </com.google.android.material.textfield.TextInputLayout>
+                        app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
                         android:id="@+id/save_event_title"
@@ -141,7 +139,7 @@
                         app:layout_constraintEnd_toEndOf="@+id/textInputLayout_eventtitle"
                         app:layout_constraintHorizontal_bias="0.0"
                         app:layout_constraintStart_toStartOf="@+id/textInputLayout_eventtitle"
-                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_date" />
+                        app:layout_constraintTop_toBottomOf="@+id/save_event_btn_date" />
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/textInputLayout_eventtitle"
@@ -151,6 +149,7 @@
                         android:layout_marginStart="48dp"
                         android:layout_marginEnd="48dp"
                         android:layout_marginBottom="16dp"
+                        android:hint="@string/save_event_title"
                         app:errorEnabled="true"
                         app:errorResId='@{userViewModel.titleErrorMessage}'
                         app:layout_constraintBottom_toTopOf="@+id/textInputLayout_notes"
@@ -158,18 +157,17 @@
                         app:layout_constraintHorizontal_bias="0.5"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/save_event_title"
-                        app:layout_constraintVertical_weight="1">
+                        app:layout_constraintVertical_weight="1"
+                        app:startIconDrawable="@drawable/ic_titel">
 
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/txt_save_event_title"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:drawableStart="@drawable/ic_titel"
-                            android:drawablePadding="5dp"
-                            android:hint="@string/save_event_title"
                             android:inputType="text"
                             android:nextFocusDown="@+id/txt_save_event_notes"
                             android:text="@={eventViewModel.eventTitle}">
+
                             <requestFocus />
                         </com.google.android.material.textfield.TextInputEditText>
                     </com.google.android.material.textfield.TextInputLayout>
@@ -179,20 +177,19 @@
                         style="@style/faith_textInputLayout"
                         android:layout_width="0dp"
                         android:layout_height="0dp"
+                        android:hint="@string/hier_kan_je_de_notities_kwijt"
                         app:layout_constraintBottom_toTopOf="@+id/btn_save_event_save"
                         app:layout_constraintEnd_toEndOf="@+id/textInputLayout_eventtitle"
                         app:layout_constraintHorizontal_bias="0.5"
                         app:layout_constraintStart_toStartOf="@+id/textInputLayout_eventtitle"
-                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_eventtitle">
+                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_eventtitle"
+                        app:startIconDrawable="@drawable/ic_notities">
 
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/txt_save_event_notes"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:drawableStart="@drawable/ic_notities"
-                            android:drawablePadding="5dp"
                             android:gravity="top|start"
-                            android:hint="@string/hier_kan_je_de_notities_kwijt"
                             android:inputType="textMultiLine"
                             android:nextFocusDown="@+id/btn_save_event_save"
                             android:singleLine="false"
