--- a/app/src/main/res/layout/view_register_frame.xml
+++ b/app/src/main/res/layout/view_register_frame.xml
@@ -29,14 +29,14 @@
                 android:hint="@string/hint_choose_username"
                 app:endIconMode="clear_text"
                 app:errorEnabled="true"
-                app:errorResId="@{registerUserInfoViewModel.userNameErrorMessage}">
+                app:errorResId="@{registerUserInfoViewModel.userNameErrorMessage}"
+                app:startIconDrawable="@drawable/ic_login_wrap">
 
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/txt_register_username"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:drawableStart="@drawable/ic_login_wrap"
                     android:inputType="textPersonName"
                     android:text="@={registerUserInfoViewModel.userName}" />
             </com.google.android.material.textfield.TextInputLayout>
@@ -49,13 +49,13 @@
                 android:hint="@string/kies_een_wachtwoord"
                 app:endIconMode="password_toggle"
                 app:errorEnabled="true"
-                app:errorResId="@{registerUserInfoViewModel.passwordErrorMessage}">
+                app:errorResId="@{registerUserInfoViewModel.passwordErrorMessage}"
+                app:startIconDrawable="@drawable/ic_lock_wrap">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/txt_register_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:drawableStart="@drawable/ic_lock_wrap"
                     android:inputType="textPassword"
                     android:text="@={registerUserInfoViewModel.password}" />
 
@@ -69,14 +69,14 @@
                 android:hint="@string/herhaal_je_wachtwoord"
                 app:endIconMode="password_toggle"
                 app:errorEnabled="true"
-                app:errorResId="@{registerUserInfoViewModel.passwordRepeatErrorMessage}">
+                app:errorResId="@{registerUserInfoViewModel.passwordRepeatErrorMessage}"
+                app:startIconDrawable="@drawable/ic_lock_wrap">
 
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/txt_register_password_repeat"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:drawableStart="@drawable/ic_lock_wrap"
                     android:inputType="textPassword"
                     android:text="@={registerUserInfoViewModel.passwordRepeated}" />
 
