--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -57,6 +57,7 @@
         <item name="android:lineSpacingExtra">4sp</item>
         <item name="boxStrokeColor">@color/caption</item>
         <item name="hintTextColor">@color/caption</item>
+        <item name="startIconTint">@null</item>
     </style>
 
     <style name="faith_button" parent="Widget.MaterialComponents.Button.OutlinedButton.Icon">
@@ -71,6 +72,18 @@
         <item name="iconTint">@null</item>
         <item name="android:gravity">center</item>
         <item name="iconGravity">textStart</item>
+    </style>
+
+    <style name="faith_calendar_button" parent="Widget.MaterialComponents.Button.OutlinedButton.Icon">
+     <item name="shapeAppearance">@style/CalendarShapeAppearance</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:backgroundTint">@color/color_white</item>
+        <item name="iconGravity">textStart</item>
+        <item name="iconTint">@null</item>
+    </style>
+    <style name="CalendarShapeAppearance">
+        <item name="cornerSizeBottomLeft">40dp</item>
+        <item name="cornerSizeBottomRight">40dp</item>
     </style>
 
     <style name="arrow_style" parent="Widget.MaterialComponents.Button.Icon">
@@ -152,6 +165,7 @@
         <item name="fontFamily">@font/sourcesanspro_semibold</item>
         <item name="android:fontFamily">@font/sourcesanspro_semibold</item>
         <item name="android:textAllCaps">false</item>
+        <item name="android:letterSpacing">0</item>
     </style>
 
     <style name="AppTheme.caption" parent="TextAppearance.MaterialComponents.Caption">
@@ -179,5 +193,7 @@
         <item name="android:textAlignment">center</item>
         <item name="android:color">@color/dark_green</item>
     </style>
+
+
 
 </resources>
