--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -175,9 +175,11 @@
         <item name="android:colorControlActivated">@color/red</item>
     </style>
 
-    <style name="PopupMenu.AddDetail" parent="TextAppearance.AppCompat.Light.Widget.PopupMenu.Small">
+    <style name="PopupMenu.AddDetail" parent="Widget.AppCompat.PopupMenu">
         <item name="android:dropDownHorizontalOffset">-8dp</item>
         <item name="android:dropDownVerticalOffset">4dp</item>
-        <item name="android:listPreferredItemHeightSmall">32dp</item>
+        <item name="android:listPreferredItemHeightSmall">100dp</item>
+        <item name="android:padding">80dp</item>
+        <item name="android:layout_margin">80dp</item>
     </style>
 </resources>
