--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,8 +16,11 @@
         <item name="colorOnBackground">@color/onBackground</item>
         <item name="android:fontFamily">@font/sourcesanspro</item>
         <item name="fontFamily">@font/sourcesanspro</item>
-
+        <item name="shapeAppearanceSmallComponent">@style/ShapeAppearance.MyApp.SmallComponent</item>
+        <item name="shapeAppearanceMediumComponent">@style/ShapeAppearance.MyApp.MediumComponent</item>
+        <item name="shapeAppearanceLargeComponent">@style/ShapeAppearance.MyApp.LargeComponent</item>
     </style>
+
 
     <style name="AppTheme.FullScreen" parent="AppTheme">
         <item name="android:windowNoTitle">true</item>
@@ -50,19 +53,31 @@
     <style name="faith_textInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <item name="android:layout_width">300dp</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="boxCornerRadiusTopEnd">30dp</item>
-        <item name="boxCornerRadiusTopStart">30dp</item>
-        <item name="boxCornerRadiusBottomEnd">30dp</item>
-        <item name="boxCornerRadiusBottomStart">30dp</item>
         <item name="android:lineSpacingExtra">4sp</item>
         <item name="boxStrokeColor">@color/caption</item>
+        <item name="boxBackgroundColor">@color/color_white</item>
         <item name="hintTextColor">@color/caption</item>
+    </style>
+
+
+    <style name="ShapeAppearance.MyApp.SmallComponent" parent="ShapeAppearance.MaterialComponents.SmallComponent">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">30dp</item>
+    </style>
+
+    <style name="ShapeAppearance.MyApp.MediumComponent" parent="ShapeAppearance.MaterialComponents.MediumComponent">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">30dp</item>
+    </style>
+
+    <style name="ShapeAppearance.MyApp.LargeComponent" parent="ShapeAppearance.MaterialComponents.LargeComponent">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">30dp</item>
     </style>
 
     <style name="faith_button" parent="Widget.MaterialComponents.Button.OutlinedButton.Icon">
         <item name="android:layout_width">300dp</item>
         <item name="android:layout_height">69dp</item>
-        <item name="cornerRadius">40dp</item>
         <item name="android:elevation">2dp</item>
         <item name="android:textAppearance">@style/AppTheme.Button</item>
         <item name="android:textColor">@color/black</item>
@@ -71,6 +86,25 @@
         <item name="iconTint">@null</item>
         <item name="android:gravity">center</item>
         <item name="iconGravity">textStart</item>
+    </style>
+
+    <style name="faith_textbutton" parent="Widget.MaterialComponents.Button.TextButton">
+        <item name="android:textAppearance">@style/AppTheme.Button</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">12sp</item>
+        <item name="iconTint">@null</item>
+        <item name="android:gravity">center</item>
+        <item name="iconGravity">textStart</item>
+    </style>
+
+    <style name="Widget.AppTheme.Button.OutlinedButton.IconOnly" parent="Widget.MaterialComponents.Button.OutlinedButton.Icon">
+        <item name="iconPadding">0dp</item>
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="android:paddingLeft">12dp</item>
+        <item name="android:paddingRight">12dp</item>
+        <item name="android:minWidth">48dp</item>
+        <item name="android:minHeight">48dp</item>
     </style>
 
     <style name="arrow_style" parent="Widget.MaterialComponents.Button.Icon">
@@ -179,5 +213,6 @@
         <item name="android:textAlignment">center</item>
         <item name="android:color">@color/dark_green</item>
     </style>
+
 
 </resources>
