--- a/app/src/main/res/layout/event_list_content.xml
+++ b/app/src/main/res/layout/event_list_content.xml
@@ -1,136 +1,141 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    style="@style/CardView.Light"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="8dp"
     android:layout_marginTop="8dp"
-    android:layout_marginEnd="8dp">
+    android:layout_marginEnd="8dp"
+    app:cardCornerRadius="30dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@drawable/shape_rounded_rectangle">
 
         <ImageView
             android:id="@+id/img_avatar"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="90dp"
+            android:layout_height="158dp"
+            android:layout_margin="21dp"
+            android:contentDescription="@string/your_avatar"
             android:scaleType="centerInside"
-            app:layout_constraintBottom_toTopOf="@+id/lbl_title"
-            app:layout_constraintDimensionRatio="H,16:9"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_chainStyle="packed" />
+            tools:src="@drawable/jongen_alternatief_outline" />
 
         <TextView
             android:id="@+id/lbl_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="21dp"
             android:text="@string/ex_title"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-            android:textColor="#DE000000"
+            android:textAppearance="@style/AppTheme.subtitle2"
+            android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@+id/lbl_date"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/img_avatar" />
+            app:layout_constraintStart_toEndOf="@+id/img_avatar"
+            app:layout_constraintTop_toTopOf="@+id/img_avatar" />
 
         <TextView
             android:id="@+id/lbl_date"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginTop="8dp"
             android:text="@string/ex_date"
+            android:textAllCaps="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:textColor="#8A000000"
-            app:layout_constraintBottom_toTopOf="@+id/img_photo"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toTopOf="@+id/hr1"
+            app:layout_constraintEnd_toEndOf="@+id/lbl_title"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="@+id/lbl_title"
             app:layout_constraintTop_toBottomOf="@+id/lbl_title" />
 
-        <ImageView
-            android:id="@+id/img_photo"
-            android:layout_width="@dimen/material_icon_width"
-            android:layout_height="@dimen/material_icon_height"
-            android:layout_marginTop="16dp"
-            android:minWidth="0dp"
-            android:paddingStart="8dp"
-            android:paddingEnd="8dp"
+        <View
+            android:id="@+id/hr1"
+            android:layout_width="0dp"
+            android:layout_height="1dip"
+            android:layout_marginTop="8dp"
+            android:background="@color/black"
             app:layout_constraintBottom_toTopOf="@+id/lbl_description"
-            app:layout_constraintEnd_toStartOf="@+id/img_draw"
+            app:layout_constraintEnd_toEndOf="@+id/lbl_title"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/lbl_date"
-            app:srcCompat="@drawable/btn_take_picture" />
-
-        <ImageView
-            android:id="@+id/img_draw"
-            android:layout_width="@dimen/material_icon_width"
-            android:layout_height="@dimen/material_icon_height"
-            android:minWidth="0dp"
-            android:paddingStart="8dp"
-            android:paddingEnd="8dp"
-            app:layout_constraintEnd_toStartOf="@+id/img_audio"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/img_photo"
-            app:layout_constraintTop_toTopOf="@+id/img_photo"
-            app:srcCompat="@drawable/ic_brush_thickline" />
-
-        <ImageView
-            android:id="@+id/img_audio"
-            android:layout_width="@dimen/material_icon_width"
-            android:layout_height="@dimen/material_icon_height"
-            android:minWidth="0dp"
-            android:paddingStart="8dp"
-            android:paddingEnd="8dp"
-            app:layout_constraintEnd_toStartOf="@+id/img_text"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/img_draw"
-            app:layout_constraintTop_toTopOf="@+id/img_photo"
-            app:srcCompat="@drawable/button_record_start" />
-
-        <ImageView
-            android:id="@+id/img_text"
-            android:layout_width="@dimen/material_icon_width"
-            android:layout_height="@dimen/material_icon_height"
-            android:minWidth="0dp"
-            android:paddingStart="8dp"
-            android:paddingEnd="8dp"
-            app:layout_constraintEnd_toStartOf="@+id/expand_button"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/img_audio"
-            app:layout_constraintTop_toTopOf="@+id/img_photo"
-            app:srcCompat="@drawable/ic_baseline_edit_24px" />
-
-        <ImageButton
-            android:id="@+id/expand_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="0dp"
-            android:background="#00FFFFFF"
-            android:padding="6dp"
-            app:layout_constraintBottom_toBottomOf="@+id/img_photo"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:srcCompat="@drawable/expand_less" />
+            app:layout_constraintStart_toStartOf="@+id/lbl_title"
+            app:layout_constraintTop_toBottomOf="@+id/lbl_date" />
 
         <TextView
             android:id="@+id/lbl_description"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginTop="8dp"
             android:lineSpacingExtra="8dp"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:textColor="#DE000000"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/img_photo" />
+            android:textAppearance="@style/AppTheme.body2"
+            app:layout_constraintBottom_toTopOf="@+id/hr2"
+            app:layout_constraintEnd_toEndOf="@+id/lbl_title"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="@+id/lbl_title"
+            app:layout_constraintTop_toBottomOf="@+id/hr1" />
+
+        <View
+            android:id="@+id/hr2"
+            android:layout_width="0dp"
+            android:layout_height="1dip"
+            android:layout_marginTop="8dp"
+            android:background="@color/black"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+            app:layout_constraintEnd_toEndOf="@+id/lbl_title"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="@+id/lbl_title"
+            app:layout_constraintTop_toBottomOf="@+id/lbl_description" />
+
+
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/img_avatar"
+            app:layout_constraintEnd_toEndOf="@+id/lbl_title"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="@+id/lbl_title"
+            app:layout_constraintTop_toBottomOf="@+id/hr2">
+
+            <ImageView
+                android:layout_width="@dimen/icon_small"
+                android:layout_height="@dimen/icon_small"
+                android:contentDescription="@string/tekst"
+                android:src="@drawable/ic_schrijven"
+                app:srcCompat="@drawable/ic_schrijven" />
+
+            <ImageView
+                android:layout_width="@dimen/icon_small"
+                android:layout_height="@dimen/icon_small"
+                android:layout_marginStart="8dp"
+                android:contentDescription="@string/audio_opnemen"
+                android:src="@drawable/ic_micro"
+                app:srcCompat="@drawable/ic_micro" />
+
+            <ImageView
+                android:layout_width="@dimen/icon_small"
+                android:layout_height="@dimen/icon_small"
+                android:layout_marginStart="8dp"
+                android:contentDescription="@string/take_photo_de_foto"
+                android:src="@drawable/ic_camera"
+                app:srcCompat="@drawable/ic_camera" />
+
+            <ImageView
+                android:layout_width="@dimen/icon_small"
+                android:layout_height="@dimen/icon_small"
+                android:layout_marginStart="8dp"
+                android:contentDescription="@string/tekenen"
+                android:src="@drawable/ic_tekenen"
+                app:srcCompat="@drawable/ic_tekenen" />
+
+
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
