--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,4 +20,5 @@
     <dimen name="textIcon_fontsize_small">25sp</dimen>
     <dimen name="textIcon_fontsize_medium">35sp</dimen>
     <dimen name="textIcon_fontsize_large">45sp</dimen>
+    <dimen name="icon_small">20dp</dimen>
 </resources>
