WIP : binding met EventListViewModel design EventDetail fragment

--- a/app/src/main/res/layout/event_list_content.xml
+++ b/app/src/main/res/layout/event_list_content.xml
@@ -104,6 +104,7 @@
             app:layout_constraintTop_toBottomOf="@+id/hr2">
 
             <ImageView
+                android:id="@+id/btn_library_event_hasText"
                 android:layout_width="@dimen/icon_small"
                 android:layout_height="@dimen/icon_small"
                 android:contentDescription="@string/tekst"
@@ -111,6 +112,7 @@
                 app:srcCompat="@drawable/ic_schrijven" />
 
             <ImageView
+                android:id="@+id/btn_library_event_hasAudio"
                 android:layout_width="@dimen/icon_small"
                 android:layout_height="@dimen/icon_small"
                 android:layout_marginStart="8dp"
@@ -119,6 +121,7 @@
                 app:srcCompat="@drawable/ic_micro" />
 
             <ImageView
+                android:id="@+id/btn_library_event_hasPhoto"
                 android:layout_width="@dimen/icon_small"
                 android:layout_height="@dimen/icon_small"
                 android:layout_marginStart="8dp"
@@ -127,6 +130,7 @@
                 app:srcCompat="@drawable/ic_camera" />
 
             <ImageView
+                android:id="@+id/btn_library_event_hasDrawing"
                 android:layout_width="@dimen/icon_small"
                 android:layout_height="@dimen/icon_small"
                 android:layout_marginStart="8dp"
